--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">ArchitectureDemo</string>
-    <string name="action_settings">Settings</string>
+    <string name="app_name">RandomFood</string>
+    <string name="title_activity_add">AddActivity</string>
 </resources>
